@@ -3,7 +3,7 @@
 # Distributed under the terms of the GNU General Public License v2
 
 # we grab our configuration
-source "${clst_gamecd_conf}" || exit 1
+source /tmp/gamecd.conf || exit 1
 
 # here we replace out game information into several files
 sed -i -e "s:livecd:gamecd:" /etc/hosts
