@@ -1,10 +1,16 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.207 2005/04/06 03:02:06 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.208 2005/04/06 14:07:11 wolf31o2 Exp $
+
+  06 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/livecd-stage1/livecd-stage1-controller.sh,
+  targets/support/gamecdfs-update.sh, targets/support/livecdfs-update.sh:
+  Merging in changes from catalyst 1.1.x for gamecd support.
 
   06 Apr 2005; Eric Edgar <rocket@gentoo.org>
   targets/stage1/stage1-preclean-chroot.sh:
-  Removing gcc-config stuff to see if its still required to work around a gcc bug
+  Removing gcc-config stuff to see if its still required to work around a gcc
+  bug
 
   06 Apr 2005; Eric Edgar <rocket@gentoo.org>
   targets/support/chroot-functions.sh, targets/support/kmerge.sh:
